--- a/index.html
+++ b/index.html
@@ -1,103 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <title>Rust WASM Demo</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + TS</title>
   </head>
   <body>
-    <script type="module">
-      function murmur2(str) {
-        // 'm' and 'r' are mixing constants generated offline.
-        // They're not really 'magic', they just happen to work well.
-
-        // const m = 0x5bd1e995;
-        // const r = 24;
-
-        // Initialize the hash
-
-        var h = 0;
-
-        // Mix 4 bytes at a time into the hash
-
-        var k,
-          i = 0,
-          len = str.length;
-        for (; len >= 4; ++i, len -= 4) {
-          k =
-            (str.charCodeAt(i) & 0xff) |
-            ((str.charCodeAt(++i) & 0xff) << 8) |
-            ((str.charCodeAt(++i) & 0xff) << 16) |
-            ((str.charCodeAt(++i) & 0xff) << 24);
-
-          k =
-            /* Math.imul(k, m): */
-            (k & 0xffff) * 0x5bd1e995 + (((k >>> 16) * 0xe995) << 16);
-          k ^= /* k >>> r: */ k >>> 24;
-
-          h =
-            /* Math.imul(k, m): */
-            ((k & 0xffff) * 0x5bd1e995 + (((k >>> 16) * 0xe995) << 16)) ^
-            /* Math.imul(h, m): */
-            ((h & 0xffff) * 0x5bd1e995 + (((h >>> 16) * 0xe995) << 16));
-        }
-
-        // Handle the last few bytes of the input array
-
-        switch (len) {
-          case 3:
-            h ^= (str.charCodeAt(i + 2) & 0xff) << 16;
-          case 2:
-            h ^= (str.charCodeAt(i + 1) & 0xff) << 8;
-          case 1:
-            h ^= str.charCodeAt(i) & 0xff;
-            h =
-              /* Math.imul(h, m): */
-              (h & 0xffff) * 0x5bd1e995 + (((h >>> 16) * 0xe995) << 16);
-        }
-
-        // Do a few final mixes of the hash to ensure the last few
-        // bytes are well-incorporated.
-
-        h ^= h >>> 13;
-        h =
-          /* Math.imul(h, m): */
-          (h & 0xffff) * 0x5bd1e995 + (((h >>> 16) * 0xe995) << 16);
-
-        return ((h ^ (h >>> 15)) >>> 0).toString(36);
-      }
-
-      function pack(str) {
-        const bytes = new Uint8Array(str.length);
-
-        for (var i = 0; i < str.length; i++) {
-          bytes[i] = str.charCodeAt(i);
-        }
-
-        return bytes;
-      }
-
-      const memory = new WebAssembly.Memory({ initial: 10, maximum: 100 });
-      (async function run() {
-        const res = await fetch(
-          "target/wasm32-unknown-unknown/release/griffel_experiments.wasm"
-        );
-        const {
-          instance: {
-            exports: { hash },
-          },
-        } = await WebAssembly.instantiate(await res.arrayBuffer(), { memory });
-        console.log(memory);
-        [
-          "foo",
-          "bar",
-          "hello world",
-          "media(forced-color-adjust:none)",
-        ].forEach((strVal) => {
-          const uIntArr = new Uint8Array(memory.buffer);
-          console.log(hash);
-          console.log(hash(pack(strVal)).toString(36), murmur2(strVal));
-        });
-      })();
-    </script>
+    <div id="app"></div>
+    <script type="module" src="./src/start.js"></script>
   </body>
 </html>
